# bevy_transform_gizmo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
assets/: gizmo_material.wgsl
examples/: demo.rs  minimal.rs  minimal_2d.rs  parent.rs  parenting.rs
src/: gizmo_material.rs  gizmo_material.wgsl  lib.rs  main.rs  normalization.rs  picking.rs  render_graph.rs
src/mesh/: cone.rs  mod.rs  truncated_torus.rs
