[package]
name = "bevy_transform_gizmo"
version = "0.7.0"
authors = [
    "Aevyrie Roessler <aevyrie@gmail.com>",
    "Foresight Mining Software Corporation",
]
edition = "2021"
description = "A 3D transform gizmo for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_transform_gizmo"
documentation = "https://docs.rs/bevy_transform_gizmo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
] }
bevy_mod_picking = { git = "https://github.com/bardt/bevy_mod_picking.git", rev = "a9e7275824807ca6e1b2f5caba10daf0526aae2a" }
bevy_mod_raycast = "0.11"

[dev-dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd",
] }
bevy_mod_picking = { git = "https://github.com/bardt/bevy_mod_picking.git", rev = "a9e7275824807ca6e1b2f5caba10daf0526aae2a" }
